load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

# Buildpack for Maven.
load("//tools:defs.bzl", "buildpack")

licenses(["notice"])

buildpack(
    name = "skywalking",
    executables = [
        ":main",
    ],
    visibility = [
        "//builders:java_builders",
        "//builders:__subpackages__",
    ],
)

go_binary(
    name = "main",
    srcs = ["main.go"],
    # Strip debugging information to reduce binary size.
    gc_linkopts = [
        "-s",
        "-w",
    ],
    deps = [
        "//pkg/devmode",
        "//pkg/env",
        "//pkg/gcpbuildpack",
        "//pkg/java",
        "@com_github_buildpacks_libcnb//:go_default_library",
    ],
)
